fix(FEV-837): QnA wrapping text in the middle of the word
* fix: use word boundary trim (fev-837)

* fix(fev-837): word-break styles; commitlint configuration

--- a/src/components/trimmed-text/trimmedText.scss
+++ b/src/components/trimmed-text/trimmedText.scss
@@ -1,5 +1,5 @@
 .text {
-  word-break: break-all;
+  word-break: normal;
   white-space: pre-wrap;
   -webkit-user-select: text;
   -moz-user-select: text;
